infrastructure/gitops/argocd/istio/workloads/operator/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
  annotations:
    argocd.argoproj.io/hook: PostSync
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
